# pybind11_examples

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main2.cpp
core_reid/: extracter_fgx.py  model.py  reid_runtime.py  search_fgx.py
core_reid/model/ft_ResNet50/: opts.yaml
scripts/: cvmodule.py  jsonmodule.py  npmodule.py  pyarmor_module.py
